# llm-evaluation-framework

./: .coverage  .gitignore  01_py_llm.py  01_test_llm.ipynb  05_RAG_Agent.ipynb  COMMANDS.md  README.md  Test1.py  Test2.py  Test5.py  app.ipynb  conftest.py  main.py  pyproject.toml  pytest.ini  report_plan_pandas_in_machine_learning  report_plan_python_language_in_data_science  requirements.txt  testDataFactory.py  utils.py  uv_test.py
_MARKUS/: requirements.txt
_archive/: 01_article_writer_should_write.csv  02_article_writer_translate.csv  03_article_writer_expand.csv  04_article_writer_publishable.csv  app_article_writer.py  app_article_writer_finish_1.py
_images/: openai_agent_basic_logging.py
config/: config.ini
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_12bcae31049cfa11_conftest_py.html  z_12bcae31049cfa11_test_indirect_params_py.html  z_145eef247bfb46b6_00_typeddict_with_mypy_py.html  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_sample_py.html  z_33ef586f18cceed8_test_fixtures_0_py.html  z_33ef586f18cceed8_test_fixtures_1_py.html  z_33ef586f18cceed8_test_fixtures_2_py.html  z_3d3c023308a5de3e_conftest_py.html  z_3d3c023308a5de3e_test_caches_py.html  z_3e7057cabfc71576_test_skip_0_py.html  z_3e7057cabfc71576_test_skip_1_py.html  z_3e7057cabfc71576_test_skip_2_py.html  z_3e7057cabfc71576_test_skip_3_py.html  z_3e7057cabfc71576_test_skip_4_py.html  z_4426a74cba02eeaf_test_classes_py.html  z_5cf7216b998940ab_test_functions_py.html  z_611e9ae63c6b716e_test_parallel_py.html  z_65473876220814dc_conftest_py.html  (+31 more)
(+230 files in other folders)
