[project]
name = "llm-evaluation-framework"
version = "0.1.0"
description = "A framework for evaluating LLMs with PyTest and a number of LLM Eval libraries"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.15",
    "ipykernel>=6.29.5",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.27",
    "langgraph>=0.5.1",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "ragas>=0.2.15",
    "requests>=2.32.4",
]
