[project]
name = "llm-evaluation-framework"
version = "0.1.0"
description = "An integration of Pytest Full Stack, Evidently and AI Agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.15",

    "evidently[llm]>=0.7.9",
    "ipykernel>=6.29.5",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.27",
    "langgraph>=0.5.1",
    "mock>=5.2.0",
    "openai>=1.93.0",
    "openai-agents>=0.1.0",
    "playwright>=1.53.0",
    "pyboxen>=1.3.0",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "pytest-bdd>=8.1.0",
    "pytest-cov>=6.2.1",
    "pytest-html>=4.1.1",
    "pytest-playwright>=0.7.0",
    "python-dotenv>=1.1.1",
    "ragas>=0.2.15",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "scikit-learn>=1.7.0",
    "sqlmodel>=0.0.24",
    "tracely>=0.2.5",
    "twitter>=1.19.6",
]
